# meu_podcast_pessoal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  links_fontes.json
.github/workflows/: deploy-site.yml
leitor_links/: Cargo.toml  README.md
leitor_links/src/: main.rs  tests.rs
links_tui/: Cargo.toml
links_tui/src/: main.rs
podcast_processor/: .env.example  .gitignore  README.md  pyproject.toml
podcast_processor/data/outputs/2026-05-18/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-19/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-20/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-21/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-22/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-23/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-25/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-26/: podcast.txt  report.md
podcast_processor/data/outputs/2026-05-29/: podcast.txt  report.md
podcast_processor/site_src/: .gitignore  mkdocs.yml
podcast_processor/site_src/docs/: index.md
podcast_processor/site_src/docs/blog/: index.md
podcast_processor/src/podcast_processor/: __init__.py  cli.py  config.py  loader.py  publish.py  render.py  script_writer.py  summarizer.py  tts.py  vectorstore.py
podcast_processor/tests/: test_config.py  test_loader.py  test_render.py  test_script_writer.py  test_summarizer_providers.py  test_summarizer_table.py  test_vectorstore.py
scripts/: run-all.sh  run-pipeline.sh
