[package]
name = "leitor_links"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feed-rs = "1.3"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
readability = "0.3"
url = "2.5"
slug = "0.1"
